--- a/aboutme.html
+++ b/aboutme.html
@@ -32,12 +32,45 @@
             <!-- <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the
                 design for the logo. The reasoning is simple, Smeet means to smile.</p> -->
             <p id="Dcolor">
-                I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>
+                I am an aspiring software developer who, through experience has gained technical and interpersonal
+                skills. I have almost finished my <u>Master of Software Development</u> degree and have completed <u>Bachelor of
+                Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation and information systems with an
+                IT specialisation. I am passionate about <em>web and mobile development with a UX focus</em>. I am developing my
+                skills</em> in software programming to expand on my technical skills by completing a Masters at VUW and
+                doing various programming projects in my spare time.
+                <!-- I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>
                 having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information
                     systems with an IT specialisation<em>. I am developing my skills in software programming to expand
                         on my technical skills by completing a Masters at VUW and doing various programming projects in
-                        my spare time.
+                        my spare time. -->
             </p>
+            <div class="row">
+                    <div class="column">
+                        <br>
+                        <!--container consist the image and text to display center
+                         when full screen---------------------------------------->
+                        <div class="hoverOverImage">
+                            <img src="AboutMe/me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                            <!--<a href="aboutme.html">-->
+                            <div class="hoverOverImage-layer_top">
+                                <div class="hoverOverImage-text">Hike upto the Belmont Trig, December 2017</div>
+                            </div>
+                            </a>
+                        </div>
+                        <br><br>
+                    </div>
+                    <!--second col-------------->
+                    <div class="column">
+                        <br>
+                        <div class="hoverOverImage">
+                            <img src="AboutMe/web1.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                            <div class="hoverOverImage-layer_top">
+                                <div class="hoverOverImage-text">Developing my website</div>
+                            </div>
+                        </div>
+                        <br><br>
+                    </div>
+                </div>
             <p id="Dcolor">When I am not studying, you will find me reading about new technologies, the current affairs
                 or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand
                 Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a
@@ -50,33 +83,7 @@
                 projects, to improve communication between key stakeholders from a financial perspective adding more
                 transparency to the building process.</p>
             <!--enable for the flex tiles row and col--->
-            <div class="row">
-                <div class="column">
-                    <br>
-                    <!--container consist the image and text to display center
-                     when full screen---------------------------------------->
-                    <div class="hoverOverImage">
-                        <img src="AboutMe/me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
-                        <!--<a href="aboutme.html">-->
-                        <div class="hoverOverImage-layer_top">
-                            <div class="hoverOverImage-text">Hike upto the Belmont Trig, December 2017</div>
-                        </div>
-                        </a>
-                    </div>
-                    <br><br>
-                </div>
-                <!--second col-------------->
-                <div class="column">
-                    <br>
-                    <div class="hoverOverImage">
-                        <img src="AboutMe/web1.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
-                        <div class="hoverOverImage-layer_top">
-                            <div class="hoverOverImage-text">Developing my website</div>
-                        </div>
-                    </div>
-                    <br><br>
-                </div>
-            </div>
+    
             <div class="wrap-collabsible">
                 <input id="collapsible" class="toggle" type="checkbox">
                 <label for="collapsible" class="lbl-toggle">My Experience and Skills</label>
