--- a/2Shakes.html
+++ b/2Shakes.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dimmu Burger | Project</title>
+    <title>2Shakes CX Redesign | Project</title>
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
@@ -44,32 +44,33 @@
             <div class="progress-bar" id="myBar"></div>
         </div>
     </div>
-		<!-- Contact me buttons ------------------------------>
-		<div class="centerWrap">
-			<h1 class="w">2Shakes CX Redesign</h1>
-			<div class="containerWork">
-			<div class="rowTwo">
-  <div class="columnTwo" align="center">
-    <a class="btn btn-icon btn-git" href="https://github.com/smeet-patel/SportsWorld-HTML-CSS-JS-PHP-"><i class="fa fa-github"></i><span>MY 2015 Cyber CV on Git Hub</span></a>
-  </div>
-  <div class="columnTwo" align="center">
-    <a class="btn btn-icon btn-cv" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"><i class="fa fa-user-circle-o"></i><span>MY 2015 Cyber CV</span></a>
-  </div>
-</div>
-			</div>
-			<h2>Task:</h2>
-			</div>
-			
-<br>
-		<!-- footer ------------------------------>
-		<footer class="footer">
-			<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-			<div class="container text-center">
-				<a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
-				<a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
-				<a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
-				<a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
-			</div>
-		</footer>
-	</body>
+    <!-- Contact me buttons ------------------------------>
+    <div class="centerWrap">
+        <h1 class="w">2Shakes CX Redesign</h1>
+        <p>This project aims to improve the profile setup step of 2Shakes web application. The 2Shakes software is
+            centralised around the idea of automating the currently paper-based processes that many bookkeepers and
+            accountants undergo. By improving the profile set up phase of the system accomplish an efficient
+            user-friendly profile setup process as well as a visually appealing UX allowing for an intuitive process.
+            By achieving these goals 2Shakes will be able to overcome the barriers, such as converting customers on
+            trial to paying customers. </p>
+        <p>Furthermore, it will reduce the number of clients and potential clients asking for support services when
+            setting up a profile. It will also mean clients are more inclined to convert into paying customers as they
+            find the setting up process to be clean and easy. We will be achieving these goals on behalf of 2Shakes
+            (Mike Kelly and Ata McGregor).</p>
+            <div class="video-container" style="text-align: center;"><iframe src="https://www.youtube.com/embed/_ZxWVRD6ksk" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+    </div>
+
+    <br>
+    <!-- footer ------------------------------>
+    <footer class="footer">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+        <div class="container text-center">
+            <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
+            <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
+            <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
+        </div>
+    </footer>
+</body>
+
 </html>
