--- a/myblog.html
+++ b/myblog.html
@@ -51,7 +51,7 @@
             frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe>
         <p style="color: orange">An interactive map is coming soon... Where next? Melbourne, Agra, Singapore or Otago region?</p>
             <!-- <br> -->
-        <h1 class="w">Bail</h1>
+        <h1 class="w">Ubud, Bali, Indonesia</h1>
         <p>Ubud - famous for being the setting of the ‘love’ segment of the best-selling memoir, Eat Pray Love, Ubud is
             often referred to as the ‘Cultural Heart of Bali’. For some Ubud acts as a place of spiritual awakening,
             for some it is a get away from the charged atmosphere of South Bali and for others it is the one place in
