--- a/2Shakes.html
+++ b/2Shakes.html
@@ -35,6 +35,18 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
+                <li><a href="#overview">1</a></li>
+                <li><a href="#overview">2</a></li>
+                <li><a href="#overview">3</a></li>
+                <li><a href="#overview">4</a></li>
+                <li><a href="#overview">5</a></li>
+                <li><a href="#overview">6</a></li>
+                <li><a href="#overview">7</a></li>
+                <li><a href="#overview">8</a></li>
+                <li><a href="#overview">9</a></li>
+                <li><a href="#overview">10</a></li>
+                <li><a href="#overview">11</a></li>
+                <li><a href="#overview">12</a></li>
                 <!-- <li><a href="#planning">Planning</a></li>
                 <li><a href="#dev">Development</a></li>
                 <li><a href="#">Reflection</a></li> -->
@@ -57,7 +69,43 @@
             setting up a profile. It will also mean clients are more inclined to convert into paying customers as they
             find the setting up process to be clean and easy. We will be achieving these goals on behalf of 2Shakes
             (Mike Kelly and Ata McGregor).</p>
-            <div class="video-container" style="text-align: center;"><iframe src="https://www.youtube.com/embed/_ZxWVRD6ksk" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+        <div class="video-container" style="text-align: center;"><iframe src="https://www.youtube.com/embed/_ZxWVRD6ksk"
+                width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+                <p>Watch the video above to get an overall understanding of the existing signup process for 2Shakes. </p>
+                <h2>Team Oscar</h2>
+        <p>Known as <b>Team Oscar</b>, we were a team of 4 passionate Information Systems students working on the
+            2Shakes improving the profile signup process. </p>
+        <p style="color: #0F78C3;"><b>Priya Modi </b><em> (Project Manager and Requirements Leader)</em></p>
+        <li style="color: black;">Priya's role was to ensuring the team is on track and meeting the deadlines set out
+            by the course and project sponsor. Also part of her role was to define requirements through discussion and
+            research with sponsors, and the end solution satisfies the sponsor's needs.
+        </li>
+        <p style="color: #0F78C3;"><b>Vrutika Patel </b><em> (Client Liaison) </em></p>
+        <li style="color: black;">Vrutika role was to keep sponsor updated through emails on progress and ensure that
+            documentation is up to date.
+        </li>
+        <p style="color: #0F78C3;"><b>Caradine Sangalang </b><em> (Design Leader) </em></p>
+        <li style="color: black;">Caradine's role was to ensure that the design satisfies the requirements set out and
+            developing processes and procedures to support and improve to the design.
+        </li>
+        <p style="color: #0F78C3;"><b>Smeet Patel [myself] </b><em> (Construction Leader) </em></p>
+        <li style="color: black;">My role was to ensure that the solution follows closely to the design and making
+            decisions about technologies used. I also had to Liaise with design leader if any issues come up when
+            constructing the solution o prototype and Liaise with requirements leader if a requirement may be
+            jeopardised as a result of problems in creating the solution.
+        </li>
+        <h2>The project Sponsors (2Shakes) </h2>
+        <p>The Project sponsors of the CX redesign project was <b>Mike Kelly</b>, the CEO of 2Shakes and <b>Ata McGregor</b>, the
+            CXO, who we met on weekly basis (Tuesday 3:30 pm). We worked with the sponsors to redesign the UI/UX
+            interface to make registration and setting up of profiles easier for users.</p>
+
+        <h2>Initial Research of sign up forms</h2>
+        <div class="video-container" style="text-align: center;">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ7MoaudiAXNDIfcTnP-PI7mGH_P_PvC585Bd_k3a0V-DCNGtGa_U4QhK4tcZyiqsZPoM5mc_ONsi6w/embed?start=true&loop=true&delayms=2000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
+        <div class="video-container" style="text-align: center;">
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRbst20ox9412Udynta2sTTbnY1XRSsWnHkwt75NPu2FYp-aKi7txVYJIIMm2JTD0URkN5iWL55-Y-F/embed?start=true&loop=true&delayms=2000" frameborder="0" width="1123" height="822" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
     </div>
 
     <br>
