--- a/2Shakes.html
+++ b/2Shakes.html
@@ -35,10 +35,10 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#overview">1</a></li>
+                <li><a href="#overview">Wireframes</a></li>
                 <li><a href="#overview">2</a></li>
                 <li><a href="#overview">3</a></li>
-                <li><a href="#overview">4</a></li>
+                <!-- <li><a href="#overview">4</a></li>
                 <li><a href="#overview">5</a></li>
                 <li><a href="#overview">6</a></li>
                 <li><a href="#overview">7</a></li>
@@ -46,7 +46,7 @@
                 <li><a href="#overview">9</a></li>
                 <li><a href="#overview">10</a></li>
                 <li><a href="#overview">11</a></li>
-                <li><a href="#overview">12</a></li>
+                <li><a href="#overview">12</a></li> -->
                 <!-- <li><a href="#planning">Planning</a></li>
                 <li><a href="#dev">Development</a></li>
                 <li><a href="#">Reflection</a></li> -->
@@ -71,8 +71,8 @@
             (Mike Kelly and Ata McGregor).</p>
         <div class="video-container" style="text-align: center;"><iframe src="https://www.youtube.com/embed/_ZxWVRD6ksk"
                 width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
-                <p>Watch the video above to get an overall understanding of the existing signup process for 2Shakes. </p>
-                <h2>Team Oscar</h2>
+        <p>Watch the video above to get an overall understanding of the existing signup process for 2Shakes. </p>
+        <h2>Team Oscar</h2>
         <p>Known as <b>Team Oscar</b>, we were a team of 4 passionate Information Systems students working on the
             2Shakes improving the profile signup process. </p>
         <p style="color: #0F78C3;"><b>Priya Modi </b><em> (Project Manager and Requirements Leader)</em></p>
@@ -95,17 +95,52 @@
             jeopardised as a result of problems in creating the solution.
         </li>
         <h2>The project Sponsors (2Shakes) </h2>
-        <p>The Project sponsors of the CX redesign project was <b>Mike Kelly</b>, the CEO of 2Shakes and <b>Ata McGregor</b>, the
+        <p>The Project sponsors of the CX redesign project was <b>Mike Kelly</b>, the CEO of 2Shakes and <b>Ata
+                McGregor</b>, the
             CXO, who we met on weekly basis (Tuesday 3:30 pm). We worked with the sponsors to redesign the UI/UX
             interface to make registration and setting up of profiles easier for users.</p>
-
-        <h2>Initial Research of sign up forms</h2>
+        <h2 class="w2">Initial Research of sign up forms</h2>
+        <p>Research of sign up forms other</p>
         <div class="video-container" style="text-align: center;">
-            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ7MoaudiAXNDIfcTnP-PI7mGH_P_PvC585Bd_k3a0V-DCNGtGa_U4QhK4tcZyiqsZPoM5mc_ONsi6w/embed?start=true&loop=true&delayms=2000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ7MoaudiAXNDIfcTnP-PI7mGH_P_PvC585Bd_k3a0V-DCNGtGa_U4QhK4tcZyiqsZPoM5mc_ONsi6w/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
+        <p>Review of 2Shakes existing signup process</p>
         <div class="video-container" style="text-align: center;">
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRbst20ox9412Udynta2sTTbnY1XRSsWnHkwt75NPu2FYp-aKi7txVYJIIMm2JTD0URkN5iWL55-Y-F/embed?start=true&loop=true&delayms=2000" frameborder="0" width="1123" height="822" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRbst20ox9412Udynta2sTTbnY1XRSsWnHkwt75NPu2FYp-aKi7txVYJIIMm2JTD0URkN5iWL55-Y-F/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" width="1123" height="822" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true"></iframe>
         </div>
+        <br>
+        <h2 class="w2">Initial Wireframes</h2>
+        <img src="2shakes/inital wireframe overview.PNG" alt="Wireframes overview" class="cenimg" style="max-width: 800px"><br>
+        <p>Above is a overview of the wireframe design design by each member of the team starting off with Caradine's
+            wireframe tope left, followed by Vrutika's and Caradine's bottom left and mine (Smeet)</p>
+        <h3>My Initial Wireframes</h3>
+        <div class="video-container" style="text-align: center;">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTvkE3JU8D1hKYvkH0tyvVfmUHwtwl0qaynVkTUmKDiTFf4fUKQqoPsrC_aSRvwzQDtKnkrT8MTUMfb/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" width="1134" height="785" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true"></iframe>
+        </div>
+        <p>My initial wireframes (high fidelity) is presented in the slides above bring innovative and creative
+            features to make the user experience better for the 2Shakes sign-up process. (Caption is in purple text in
+            the sides)</p>
+        <h3>Other Members Initial Wireframes</h3>
+        <div class="video-container" style="text-align: center;">
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQTp-WPEEYBW1nei0Ppl_A8UeubofZUZ7ot6tq_aMPQiwfTpOsAlp-m8klBudJmoCBYhloe0T3_kJiw/embed?start=true&loop=true&delayms=1000" frameborder="0" width="1123" height="823" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
+        <p>Above the other members wireframe designs, starting off with Priya's wireframe, followed Vrutika and
+            Caradine's</p>
+        <h3>Week 4 Wireframes Feedback</h3>
+        <p>In our meeting with 2Shakes we had each recieved some feedback. We were told that overall all of the
+            wireframe had some good aspects/features in our individual designs that we could implement and combine into
+            a single group wireframe. </p>
+            <h3>Revised Group Wireframe and Sponsor Feedback</h3>
+            <div class="iframe-container">
+                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQBHoMG8VB851R4EBHb8DlTsi7ZGYo8Ww0wkZeTlj8dWmRMi6EfYna9CpHEBA-MBkmVgpoEbs2FMb_i/embed?start=true&loop=true&delayms=2000" frameborder="0" width="793" height="1152" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+            <p>Above the other members wireframe designs, starting off with Priya's wireframe, followed Vrutika and
+                Caradine's</p>
     </div>
 
     <br>
