2shakes vertical slide responsive

--- a/2Shakes.html
+++ b/2Shakes.html
@@ -113,6 +113,9 @@
         </div>
         <br>
         <h2 class="w2">Initial Wireframes</h2>
+        <p>As a group, we choose to design our own wireframes because this allowed us to represent more concept to
+            2Shakes at the meeting and we each had slightly different taste to design, so it was great we see everyone
+            perspective and implementation. </p>
         <img src="2shakes/inital wireframe overview.PNG" alt="Wireframes overview" class="cenimg" style="max-width: 800px"><br>
         <p>Above is a overview of the wireframe design design by each member of the team starting off with Caradine's
             wireframe tope left, followed by Vrutika's and Caradine's bottom left and mine (Smeet)</p>
@@ -127,7 +130,9 @@
             the sides)</p>
         <h3>Other Members Initial Wireframes</h3>
         <div class="video-container" style="text-align: center;">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQTp-WPEEYBW1nei0Ppl_A8UeubofZUZ7ot6tq_aMPQiwfTpOsAlp-m8klBudJmoCBYhloe0T3_kJiw/embed?start=true&loop=true&delayms=1000" frameborder="0" width="1123" height="823" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQTp-WPEEYBW1nei0Ppl_A8UeubofZUZ7ot6tq_aMPQiwfTpOsAlp-m8klBudJmoCBYhloe0T3_kJiw/embed?start=true&loop=true&delayms=1000"
+                frameborder="0" width="1123" height="823" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true"></iframe>
         </div>
         <p>Above the other members wireframe designs, starting off with Priya's wireframe, followed Vrutika and
             Caradine's</p>
@@ -135,12 +140,17 @@
         <p>In our meeting with 2Shakes we had each recieved some feedback. We were told that overall all of the
             wireframe had some good aspects/features in our individual designs that we could implement and combine into
             a single group wireframe. </p>
-            <h3>Revised Group Wireframe and Sponsor Feedback</h3>
-            <div class="iframe-container">
-                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQBHoMG8VB851R4EBHb8DlTsi7ZGYo8Ww0wkZeTlj8dWmRMi6EfYna9CpHEBA-MBkmVgpoEbs2FMb_i/embed?start=true&loop=true&delayms=2000" frameborder="0" width="793" height="1152" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
-            <p>Above the other members wireframe designs, starting off with Priya's wireframe, followed Vrutika and
-                Caradine's</p>
+        <h3>Revised Group Wireframe and Sponsor Feedback</h3>
+        <div class="iframe-container">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQBHoMG8VB851R4EBHb8DlTsi7ZGYo8Ww0wkZeTlj8dWmRMi6EfYna9CpHEBA-MBkmVgpoEbs2FMb_i/embed?start=true&loop=true&delayms=2000"
+                frameborder="0" width="793" height="1152" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true"></iframe>
+        </div>
+        <p>For our next meet with the project sponsor (Week 6, we got feedback on the latest wireframe which based on
+            Priya's initial wireframe. During the meeting, we annotated the wireframe design as shown in the slides
+            above. Based on Priya's wireframes we improved and refined the wireframes depending on each member comments
+            from the initial individual wireframe.</p>
+            <p>For the navigation, the team along with Ata choose to implement my vertical progress navigation. </p>
     </div>
 
     <br>
