--- a/2Shakes.html
+++ b/2Shakes.html
@@ -150,8 +150,22 @@
             Priya's initial wireframe. During the meeting, we annotated the wireframe design as shown in the slides
             above. Based on Priya's wireframes we improved and refined the wireframes depending on each member comments
             from the initial individual wireframe.</p>
-            <p>For the navigation, the team along with Ata choose to implement my vertical progress navigation. </p>
+        <p>For the navigation, the team along with Ata choose to implement my vertical progress navigation. </p>
+        <h3 class="w2">Back to Square One (Redesign)</h3>
+        <p>With six weeks left, all had hectic schedules with our studies and part-time jobs. To get a move on, I
+            decided that as a team we had to get a move along as a construction leader. I also want to redesign the
+            wireframe with a different concept which is both user-friendly and aesthetically pleasing. </p>
+        <p>The current UI trends were using tiles, gradient colours, a lot of white space that emphasised minimalistic
+            design.</p>
+        <p>Some of the key features which we planned to focus on was the navigation flow, implementation of tools and
+            tips widget which allows users to access additional information, breaking down the form into understandable
+            bit size features. </p>
+            <p style="color: #0F78C3">Concept 1 (step progress navigation with the banner on the top):</p>
+            <img src="2shakes/mid break design 1.PNG" alt="New concept" class="cenimg" style="max-width: 800px">
+            <p></p>
+            <img src="2shakes/mid break design 2.PNG" alt="New concept" class="cenimg" style="max-width: 800px"><br>
     </div>
+
 
     <br>
     <!-- footer ------------------------------>
