--- a/mywork.html
+++ b/mywork.html
@@ -114,10 +114,10 @@
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
+                           <a id="share" class="share-toggle share-icon" href=""></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="CyberCV2015.html">Everest Andriod Web Broswer </a></h3>
+                           <h3><a href="">Everest Andriod Web Broswer </a></h3>
                            <p>Everest is web browser for all Android devices which simplifies and enhance the web browsing experience. My vision to become an Android developer. </p>
                            <br>
                         </article>
