--- a/2Shakes.html
+++ b/2Shakes.html
@@ -197,8 +197,23 @@
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSbKoiZb7TP6mcOYHn9t5mnF8FkDDhj3gAQaEYcUBOcGLKU6x4HzlRAX3PQsv2dIewnEwgxrarlHYJU/embed?start=true&amp;loop=true&amp;delayms=2000"
                 width="1280" height="749" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
         </div>
-        <p></p>
-
+        <h3>Step-Progress Bar </h3>
+        <img src="2shakes/step progress bar design.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <p>Again back to the drawing board, I wanted to present something which was contemporary with a new fresh look.
+            We decided to implement a step-progress bar on the top with tiles on the left side of the screen. </p>
+        <p style="color: #0F78C3">Is JetStar the answer?</p>
+        <img src="2shakes/Jetstar.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <img src="2shakes/2shakesredign1.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <p>The second design was inspired based on the Jetstar web flight booking system. </p>
+        <p>Mike, the project sponsor, preferred the second option but said he would like to have a footer as well as a
+            visual cue which allows the user to know which form is currently active because the user has the option to
+            go back and revisit forms. </p>
+            <img src="2shakes/loginpage.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+            <img src="2shakes/reviewsignup.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+            <img src="2shakes/the chosen traning colour.PNG" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+        <video width="400" controls autoplay loop>
+            <source src="2shakes/Prototype_RecordingV1.mov" type="video/mp4">
+        </video>
     </div>
 
 
