--- a/myblog.html
+++ b/myblog.html
@@ -34,7 +34,8 @@
         <!-- <div class="mar"></div> -->
         <nav class="shift">
             <ul>
-                <li><a href="#">Traveler Guide</a></li>
+                <li><a href="#"  onclick="bali()" >Traveler Guide</a></li>
+                <li><a href="#loadblog" onclick="mel()" class="pronav">Melbourne</a></li>
                 <li><a href="https://smeet-patel.github.io/Launchpadreview.html" title="Agile UX Designer Influence">Launchpad</a></li>
                 <!-- <li><a href="#dev">Development</a></li> -->
                 <!-- <li><a href="#">Reflection</a></li> -->
@@ -49,8 +50,11 @@
         <h1 class="w">Traveler Guide</h1>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
             frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe>
-        <p style="color: orange">An interactive map is coming soon... Where next? Melbourne, Agra, Singapore or Otago region?</p>
-            <!-- <br> -->
+        <p style="color: orange" id="loadblog">An interactive map is coming soon... Where next? Melbourne, Agra, Singapore or Otago
+            region?</p>
+    </div>
+    <div class="centerWrap" id="baliBlog">
+        <!-- <br> -->
         <h1 class="w">Ubud, Bali, Indonesia</h1>
         <p>Ubud - famous for being the setting of the ‘love’ segment of the best-selling memoir, Eat Pray Love, Ubud is
             often referred to as the ‘Cultural Heart of Bali’. For some Ubud acts as a place of spiritual awakening,
@@ -73,6 +77,36 @@
         <p><b>Tips: </b>Always bargain – don’t let the over friendliness fool you (start 20-25% of the proposed price),
             talk to locals and hire a car + driver for the whole day, the food is worth the money</p>
     </div>
+
+    <div class="centerWrap" id="melBlog" style="display: none;">
+        <!-- <br> -->
+        <h1 class="w">Melbourne, Australia</h1>
+        <p>For years Melbourne has been the holder the title of “The Worlds Most Livable City” and why would it not be
+            with its multicultural population and various ethnic enclaves which help create an accepting environment.
+            Out of the major Australian cities I have visited I felt Melbourne was the city that reminded me of
+            Wellington the most. What surprised me were the facts I learnt on the free CBD tram that Melbourne has the
+            largest Italian population outside of Italy, is home to the third largest Greek speaking city based
+            population globally and the large Vietnamese influx was reflected by Nyugen being the second most common
+            surname in Melbourne’s phone book. The cultural diversity spills over in the quality diverse restaurants
+            which are dispersed between the hipster cafes which are home for the world-famous Melbourne coffee. </p>
+        <img src="blog/mel1.jpeg" alt="Melbourne" class="cenimg" style="max-width: 800px"><br>
+        <p>Over the course of three days we focused on getting to experience Melbourne like a local as much as
+            possible. The frequency of public transport helped us to travel to the nearby suburbs of St. Kilda and
+            Brighton to get away from the bustling CBD region and enjoy the beaches and its attractions. Having a
+            passion in architecture meant I could marvel at the infrastructure and layout of the city which meant we
+            could walk along the beautiful Yarra River, past the Flinders station on the way to the historical MCG to
+            watch Melbourne Football Club take apart the opposition in a game of Aussie Rules. As all cities have their
+            strengths and weaknesses, the three days helped me conclude why year in year out Melbourne is awarded the
+            title of “The World’s Most Livable City”. </p>
+        <img src="b1.jpg" alt="rice feilds" class="cenimg" style="max-width: 800px"><br>
+        <p><b>Food specialities: </b> world famous Coffee, multi-cultural cuisine and rooftop bar hopping</p>
+        <p><b>Attractions: </b> Catch a sports game at the MCG, walk around the CBD and don’t miss the alleyways
+            littered with street art, walk along the Yarra river and take in Melbourne come to life at night and watch
+            the sunset over Melbourne from St. Kilda after marveling the Brighton Bathing boxes. </p>
+        <p><b>Tips: </b>Catch Skybus from and to Airport, the expensive eateries aren’t always the best, walk or catch
+            the tram around the CBD</p>
+    </div>
+
 
 
 
