--- a/myblog.html
+++ b/myblog.html
@@ -43,8 +43,10 @@
             </ul>
         </nav>
         <div class="progress-container">
-            <div class="progress-bar" id="myBar"></div>
-        </div>
+            <div class="progress-bar" id="myBar">
+                
+            </div>
+        </div> 
     </div>
     <!-- Contact me buttons ------------------------------>
     <div class="centerWrap">
